--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="images/logo.png" class="logo">
+                <img src="Images/logo.png" class="logo">
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -35,7 +35,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="images/Me3.png">
+                    <img src="Images/Me3.png">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
@@ -117,7 +117,7 @@
             <h1 class="sub-title">My Work</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="images/work-1.png">
+                    <img src="Images/work-1.png">
                     <div class="layer">
                         <h3>Social Media App</h3>
                         <p>sdasdasdafafafafa asadasdasfasda</p>
@@ -125,7 +125,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/work-2.png">
+                    <img src="Images/work-2.png">
                     <div class="layer">
                         <h3>Music App</h3>
                         <p>sdasdasdafafafafa asadasdasfasda</p>
@@ -133,7 +133,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/work-3.png">
+                    <img src="Images/work-3.png">
                     <div class="layer">
                         <h3>Online Store App</h3>
                         <p>sdasdasdafafafafa asadasdasfasda</p>
